Fix native-access warning when creating stdlib indexes